data/derived/comb/progs/unify/prog1145.ml.out
Characters 68-72:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type int but an expression was expected of type
         int -> int -> int
